# power-slurm

./: META  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  make.log.txt  slurm.spec
auxdir/: Makefile.in
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/cray/csm/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/perlapi/libslurm/: Makefile.in
contribs/perlapi/libslurmdb/: Makefile.in
contribs/phpext/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
doc/man/man1/: Makefile.in
doc/man/man3/: Makefile.in
doc/man/man5/: Makefile.in
doc/man/man8/: Makefile.in
etc/: Makefile.in
slurm/: slurm.h.in
src/: Makefile.in  configure.ac
src/api/: Makefile.in  config_info.c  node_info.c
src/bcast/: Makefile.in
src/common/: Makefile.am  Makefile.in  node_conf.c  node_conf.h  node_select.c  plugin.c  power_knob.c  power_knob.h  read_config.c  read_config.h  slurm_perf_mon.c  slurm_perf_mon.h  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_pack.c  slurm_protocol_socket_implementation.c
src/database/: Makefile.in
src/db_api/: Makefile.in
src/layouts/: Makefile.in
src/layouts/power/: Makefile.in
src/layouts/unit/: Makefile.in
src/plugins/: Makefile.am  Makefile.in
src/plugins/accounting_storage/: Makefile.in
src/plugins/acct_gather_energy/: Makefile.in
src/plugins/acct_gather_filesystem/: Makefile.in
src/plugins/acct_gather_infiniband/: Makefile.in
src/plugins/acct_gather_profile/: Makefile.in
src/plugins/auth/: Makefile.in
src/plugins/burst_buffer/: Makefile.in
src/plugins/checkpoint/: Makefile.in
src/plugins/core_spec/: Makefile.in
src/plugins/crypto/: Makefile.in
src/plugins/ext_sensors/: Makefile.in
src/plugins/gres/: Makefile.in
src/plugins/job_container/: Makefile.in
src/plugins/job_submit/: Makefile.in
src/plugins/jobacct_gather/: Makefile.in
src/plugins/jobcomp/: Makefile.am.old.cao.save  Makefile.in
src/plugins/launch/: Makefile.in
src/plugins/mcs/: Makefile.in
src/plugins/mpi/: Makefile.in
src/plugins/node_features/: Makefile.am  Makefile.in
src/plugins/power/: Makefile.in
src/plugins/power_allocator/: Makefile.am  Makefile.in
src/plugins/power_allocator/dynamic/: Makefile.am  Makefile.in  power_allocator_dynamic.c
src/plugins/power_allocator/linear/: Makefile.am  Makefile.in  power_allocator_linear.c
src/plugins/power_allocator/none/: Makefile.am  Makefile.in  power_allocator_none.c
src/plugins/power_allocator/priority_adaptive/: Makefile.am
src/plugins/power_analyser/: Makefile.am
src/plugins/power_analyser/easy_linear/: Makefile.am
src/plugins/power_analyzer/: Makefile.am  Makefile.in
src/plugins/power_analyzer/linear/: Makefile.am  Makefile.in  power_analyzer_linear.c
src/plugins/power_knob/: Makefile.am  Makefile.in
src/plugins/power_knob/none/: Makefile.am  Makefile.in  power_knob_none.c
src/plugins/power_knob/rapl/: Makefile.am  Makefile.in  power_knob_rapl.c
src/plugins/power_schedule_slurmd/: Makefile.am  Makefile.in
src/plugins/power_schedule_slurmd/auto/: Makefile.am  Makefile.in  power_schedule_slurmd_auto.c
src/plugins/preempt/: Makefile.in
src/plugins/priority/: Makefile.in
src/plugins/proctrack/: Makefile.in
src/plugins/route/: Makefile.in
src/plugins/sched/: Makefile.in
src/plugins/select/: Makefile.in
src/plugins/select/linear_power/: Makefile.am  Makefile.in  select_linear_power.c  select_linear_power.h
src/plugins/slurmctld/: Makefile.in
src/plugins/slurmd/: Makefile.in
src/plugins/switch/: Makefile.in
src/plugins/task/: Makefile.in
src/plugins/topology/: Makefile.in
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in  sbatch.c
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.am  Makefile.in  agent.c  controller.c  job_scheduler.c  node_mgr.c  power_allocator_plugin.c  power_allocator_plugin.h  power_analyzer_plugin.c  power_analyzer_plugin.h  power_monitor.c  power_monitor.h  power_schedule_slurmd_plugin.c  power_schedule_slurmd_plugin.h  read_config.c  slurmctld.h
src/slurmd/: Makefile.in
src/slurmd/common/: Makefile.in
src/slurmd/slurmd/: Makefile.in  req.c  slurmd.c
src/slurmd/slurmstepd/: Makefile.in
src/slurmdbd/: Makefile.in
src/smap/: Makefile.in
src/smd/: Makefile.in
src/sprio/: Makefile.in
src/squeue/: Makefile.in
src/sreport/: Makefile.in
src/srun/: Makefile.in
src/srun_cr/: Makefile.in
src/sshare/: Makefile.in
src/sstat/: Makefile.in
src/strigger/: Makefile.in
src/sview/: Makefile.in
testsuite/: Makefile.in
testsuite/expect/: Makefile.in
testsuite/slurm_unit/: Makefile.in
(+135 files in other folders)
